@@ -38,6 +38,7 @@ dpkg (1.18.5) UNRELEASED; urgency=medium
   * Add a new treewalk module in libdpkg, with the nice properties of avoiding
     duplicate stat(2) calls, not calling find(1), and sorting the output w/o
     stalling on the entire input being slurped and sorted.
+    - Use it to build the .deb data member in dpkg-deb.
   * Portability:
     - Move DPKG_ADMINDIR environment variable name out from update-alternatives
       code, to make life easier for non-dpkg-based systems.
